--- a/Pipfile
+++ b/Pipfile
@@ -35,6 +35,8 @@ Sphinx = "==1.8.4"
 factory_boy = "==2.11.1"
 django_coverage_plugin = "==1.6.0"
 django-cors-headers = "*"
+django-rest-auth = "*"
+djangorestframework-jwt = "*"
 
 [requires]
 python_version = "3.7"
