--- a/Pipfile
+++ b/Pipfile
@@ -37,6 +37,7 @@ django_coverage_plugin = "==1.6.0"
 django-cors-headers = "*"
 django-rest-auth = "*"
 djangorestframework-jwt = "*"
+pyserial = "*"
 
 [requires]
 python_version = "3.7"
